# cc-devloop

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
agent/: bridge.ts  index.ts
docs/: PROGRESS.md  SOLUTION.md  agent-design.md  phase1-mvp.md  phase2-v1.md  phase3-v2.md  profile-system.md  ui-layout.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  fs.rs  git.rs  mod.rs  terminal.rs  watcher.rs
src/components/: CommandPalette.tsx  ErrorBoundary.tsx  GitChanges.tsx  GlobalSearch.tsx  Layout.tsx  ShortcutsPanel.tsx  StatusBar.tsx  WelcomeScreen.tsx
src/components/AgentPanel/: AgentHeader.tsx  ChatInput.tsx  ChatPanel.tsx  EmptyState.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  StreamingMessage.tsx  ToolCallCard.tsx
src/components/Editor/: Breadcrumbs.tsx  CodeEditor.tsx  DiffEditorView.tsx  EditorTabs.tsx
src/components/Sidebar/: FileTree.tsx  GitPanel.tsx  SettingsPanel.tsx
src/components/Terminal/: Terminal.tsx
src/hooks/: useAgent.ts  useKeyboardShortcuts.ts  useThemeEffect.ts
src/stores/: agentStore.ts  editorStore.ts  projectStore.ts  shortcutsStore.ts  terminalStore.ts  themeStore.ts
src/utils/: languageDetect.ts
