[package]
name = "cc-devloop"
version = "0.1.0"
description = "AI-Driven Full-Lifecycle Development Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "cc_devloop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
notify = { version = "7", features = ["macos_fsevent"] }
